parser/meta_parser.go
// Code generated from /home/kimloong/GolandProjects/gomelon/meta/parser/MetaParser.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // MetaParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MetaParser struct {
	*antlr.BaseParser
}

var metaparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func metaparserParserInit() {
	staticData := &metaparserParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "", "'//'", "'/*'", "'*/'", "", "", "", "'+'", "'='",
		"'.'",
	}
	staticData.symbolicNames = []string{
		"", "META_QUALIFY_NAME", "BOOLEAN", "FLOAT", "INTEGER", "LINE_COMMENT",
		"BLOCK_COMMENT_START", "BLOCK_COMMENT_END", "IDENT", "WS", "STRING",
		"PLUS", "ASSIGNMENT", "DOT", "ERRCHAR",
	}
	staticData.ruleNames = []string{
		"root", "singleLine", "multipleLine", "metaBody", "metaQualifyName",
		"fieldExpr", "fieldNameValueExpr", "fieldName", "valueExpr", "boolValue",
		"strValue", "floatValue", "integerValue", "fieldNameExpr",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MetaParserInit initializes any static state used to implement MetaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMetaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MetaParserInit() {
	staticData := &metaparserParserStaticData
	staticData.once.Do(metaparserParserInit)
}

// NewMetaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMetaParser(input antlr.TokenStream) *MetaParser {
	MetaParserInit()
	this := new(MetaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &metaparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "MetaParser.g4"

	return this
}

// MetaParser tokens.
const (
	MetaParserEOF                 = antlr.TokenEOF
	MetaParserMETA_QUALIFY_NAME   = 1
	MetaParserBOOLEAN             = 2
	MetaParserFLOAT               = 3
	MetaParserINTEGER             = 4
	MetaParserLINE_COMMENT        = 5
	MetaParserBLOCK_COMMENT_START = 6
	MetaParserBLOCK_COMMENT_END   = 7
	MetaParserIDENT               = 8
	MetaParserWS                  = 9
	MetaParserSTRING              = 10
	MetaParserPLUS                = 11
	MetaParserASSIGNMENT          = 12
	MetaParserDOT                 = 13
	MetaParserERRCHAR             = 14
)

// MetaParser rules.
const (
	MetaParserRULE_root               = 0
	MetaParserRULE_singleLine         = 1
	MetaParserRULE_multipleLine       = 2
	MetaParserRULE_metaBody           = 3
	MetaParserRULE_metaQualifyName    = 4
	MetaParserRULE_fieldExpr          = 5
	MetaParserRULE_fieldNameValueExpr = 6
	MetaParserRULE_fieldName          = 7
	MetaParserRULE_valueExpr          = 8
	MetaParserRULE_boolValue          = 9
	MetaParserRULE_strValue           = 10
	MetaParserRULE_floatValue         = 11
	MetaParserRULE_integerValue       = 12
	MetaParserRULE_fieldNameExpr      = 13
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) SingleLine() ISingleLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISingleLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISingleLineContext)
}

func (s *RootContext) MultipleLine() IMultipleLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMultipleLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMultipleLineContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(MetaParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *MetaParser) Root() (localctx IRootContext) {
	this := p
	_ = this

	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MetaParserRULE_root)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(32)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case MetaParserLINE_COMMENT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(28)
			p.SingleLine()
		}

	case MetaParserBLOCK_COMMENT_START:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(29)
			p.MultipleLine()
		}
		{
			p.SetState(30)
			p.Match(MetaParserEOF)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ISingleLineContext is an interface to support dynamic dispatch.
type ISingleLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSingleLineContext differentiates from other interfaces.
	IsSingleLineContext()
}

type SingleLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySingleLineContext() *SingleLineContext {
	var p = new(SingleLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_singleLine
	return p
}

func (*SingleLineContext) IsSingleLineContext() {}

func NewSingleLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SingleLineContext {
	var p = new(SingleLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_singleLine

	return p
}

func (s *SingleLineContext) GetParser() antlr.Parser { return s.parser }

func (s *SingleLineContext) LINE_COMMENT() antlr.TerminalNode {
	return s.GetToken(MetaParserLINE_COMMENT, 0)
}

func (s *SingleLineContext) MetaBody() IMetaBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetaBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetaBodyContext)
}

func (s *SingleLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SingleLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SingleLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterSingleLine(s)
	}
}

func (s *SingleLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitSingleLine(s)
	}
}

func (p *MetaParser) SingleLine() (localctx ISingleLineContext) {
	this := p
	_ = this

	localctx = NewSingleLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MetaParserRULE_singleLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.Match(MetaParserLINE_COMMENT)
	}
	{
		p.SetState(35)
		p.MetaBody()
	}

	return localctx
}

// IMultipleLineContext is an interface to support dynamic dispatch.
type IMultipleLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMultipleLineContext differentiates from other interfaces.
	IsMultipleLineContext()
}

type MultipleLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMultipleLineContext() *MultipleLineContext {
	var p = new(MultipleLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_multipleLine
	return p
}

func (*MultipleLineContext) IsMultipleLineContext() {}

func NewMultipleLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MultipleLineContext {
	var p = new(MultipleLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_multipleLine

	return p
}

func (s *MultipleLineContext) GetParser() antlr.Parser { return s.parser }

func (s *MultipleLineContext) BLOCK_COMMENT_START() antlr.TerminalNode {
	return s.GetToken(MetaParserBLOCK_COMMENT_START, 0)
}

func (s *MultipleLineContext) MetaBody() IMetaBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetaBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetaBodyContext)
}

func (s *MultipleLineContext) BLOCK_COMMENT_END() antlr.TerminalNode {
	return s.GetToken(MetaParserBLOCK_COMMENT_END, 0)
}

func (s *MultipleLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MultipleLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MultipleLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterMultipleLine(s)
	}
}

func (s *MultipleLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitMultipleLine(s)
	}
}

func (p *MetaParser) MultipleLine() (localctx IMultipleLineContext) {
	this := p
	_ = this

	localctx = NewMultipleLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MetaParserRULE_multipleLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(37)
		p.Match(MetaParserBLOCK_COMMENT_START)
	}
	{
		p.SetState(38)
		p.MetaBody()
	}
	{
		p.SetState(39)
		p.Match(MetaParserBLOCK_COMMENT_END)
	}

	return localctx
}

// IMetaBodyContext is an interface to support dynamic dispatch.
type IMetaBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMetaBodyContext differentiates from other interfaces.
	IsMetaBodyContext()
}

type MetaBodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetaBodyContext() *MetaBodyContext {
	var p = new(MetaBodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_metaBody
	return p
}

func (*MetaBodyContext) IsMetaBodyContext() {}

func NewMetaBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MetaBodyContext {
	var p = new(MetaBodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_metaBody

	return p
}

func (s *MetaBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *MetaBodyContext) MetaQualifyName() IMetaQualifyNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetaQualifyNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetaQualifyNameContext)
}

func (s *MetaBodyContext) AllFieldExpr() []IFieldExprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldExprContext); ok {
			len++
		}
	}

	tst := make([]IFieldExprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldExprContext); ok {
			tst[i] = t.(IFieldExprContext)
			i++
		}
	}

	return tst
}

func (s *MetaBodyContext) FieldExpr(i int) IFieldExprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldExprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldExprContext)
}

func (s *MetaBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetaBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MetaBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterMetaBody(s)
	}
}

func (s *MetaBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitMetaBody(s)
	}
}

func (p *MetaParser) MetaBody() (localctx IMetaBodyContext) {
	this := p
	_ = this

	localctx = NewMetaBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MetaParserRULE_metaBody)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.MetaQualifyName()
	}
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == MetaParserIDENT {
		{
			p.SetState(42)
			p.FieldExpr()
		}

		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IMetaQualifyNameContext is an interface to support dynamic dispatch.
type IMetaQualifyNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMetaQualifyNameContext differentiates from other interfaces.
	IsMetaQualifyNameContext()
}

type MetaQualifyNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetaQualifyNameContext() *MetaQualifyNameContext {
	var p = new(MetaQualifyNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_metaQualifyName
	return p
}

func (*MetaQualifyNameContext) IsMetaQualifyNameContext() {}

func NewMetaQualifyNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MetaQualifyNameContext {
	var p = new(MetaQualifyNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_metaQualifyName

	return p
}

func (s *MetaQualifyNameContext) GetParser() antlr.Parser { return s.parser }

func (s *MetaQualifyNameContext) META_QUALIFY_NAME() antlr.TerminalNode {
	return s.GetToken(MetaParserMETA_QUALIFY_NAME, 0)
}

func (s *MetaQualifyNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetaQualifyNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MetaQualifyNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterMetaQualifyName(s)
	}
}

func (s *MetaQualifyNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitMetaQualifyName(s)
	}
}

func (p *MetaParser) MetaQualifyName() (localctx IMetaQualifyNameContext) {
	this := p
	_ = this

	localctx = NewMetaQualifyNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, MetaParserRULE_metaQualifyName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(MetaParserMETA_QUALIFY_NAME)
	}

	return localctx
}

// IFieldExprContext is an interface to support dynamic dispatch.
type IFieldExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldExprContext differentiates from other interfaces.
	IsFieldExprContext()
}

type FieldExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldExprContext() *FieldExprContext {
	var p = new(FieldExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_fieldExpr
	return p
}

func (*FieldExprContext) IsFieldExprContext() {}

func NewFieldExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldExprContext {
	var p = new(FieldExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_fieldExpr

	return p
}

func (s *FieldExprContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldExprContext) FieldNameValueExpr() IFieldNameValueExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNameValueExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNameValueExprContext)
}

func (s *FieldExprContext) FieldNameExpr() IFieldNameExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNameExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNameExprContext)
}

func (s *FieldExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterFieldExpr(s)
	}
}

func (s *FieldExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitFieldExpr(s)
	}
}

func (p *MetaParser) FieldExpr() (localctx IFieldExprContext) {
	this := p
	_ = this

	localctx = NewFieldExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, MetaParserRULE_fieldExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.FieldNameValueExpr()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(51)
			p.FieldNameExpr()
		}

	}

	return localctx
}

// IFieldNameValueExprContext is an interface to support dynamic dispatch.
type IFieldNameValueExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldNameValueExprContext differentiates from other interfaces.
	IsFieldNameValueExprContext()
}

type FieldNameValueExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldNameValueExprContext() *FieldNameValueExprContext {
	var p = new(FieldNameValueExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_fieldNameValueExpr
	return p
}

func (*FieldNameValueExprContext) IsFieldNameValueExprContext() {}

func NewFieldNameValueExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldNameValueExprContext {
	var p = new(FieldNameValueExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_fieldNameValueExpr

	return p
}

func (s *FieldNameValueExprContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldNameValueExprContext) FieldName() IFieldNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldNameContext)
}

func (s *FieldNameValueExprContext) ASSIGNMENT() antlr.TerminalNode {
	return s.GetToken(MetaParserASSIGNMENT, 0)
}

func (s *FieldNameValueExprContext) ValueExpr() IValueExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueExprContext)
}

func (s *FieldNameValueExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldNameValueExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldNameValueExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterFieldNameValueExpr(s)
	}
}

func (s *FieldNameValueExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitFieldNameValueExpr(s)
	}
}

func (p *MetaParser) FieldNameValueExpr() (localctx IFieldNameValueExprContext) {
	this := p
	_ = this

	localctx = NewFieldNameValueExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, MetaParserRULE_fieldNameValueExpr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.FieldName()
	}
	{
		p.SetState(55)
		p.Match(MetaParserASSIGNMENT)
	}
	{
		p.SetState(56)
		p.ValueExpr()
	}

	return localctx
}

// IFieldNameContext is an interface to support dynamic dispatch.
type IFieldNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldNameContext differentiates from other interfaces.
	IsFieldNameContext()
}

type FieldNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldNameContext() *FieldNameContext {
	var p = new(FieldNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_fieldName
	return p
}

func (*FieldNameContext) IsFieldNameContext() {}

func NewFieldNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldNameContext {
	var p = new(FieldNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_fieldName

	return p
}

func (s *FieldNameContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldNameContext) IDENT() antlr.TerminalNode {
	return s.GetToken(MetaParserIDENT, 0)
}

func (s *FieldNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.EnterFieldName(s)
	}
}

func (s *FieldNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MetaParserListener); ok {
		listenerT.ExitFieldName(s)
	}
}

func (p *MetaParser) FieldName() (localctx IFieldNameContext) {
	this := p
	_ = this

	localctx = NewFieldNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, MetaParserRULE_fieldName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(MetaParserIDENT)
	}

	return localctx
}

// IValueExprContext is an interface to support dynamic dispatch.
type IValueExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValueExprContext differentiates from other interfaces.
	IsValueExprContext()
}

type ValueExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueExprContext() *ValueExprContext {
	var p = new(ValueExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = MetaParserRULE_valueExpr
	return p
}

func (*ValueExprContext) IsValueExprContext() {}

func NewValueExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueExprContext {
	var p = new(ValueExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = MetaParserRULE_valueExpr

	return p
}

func (s *ValueExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueExprContext) BoolValue() IBoolValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBoolValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBoolValueContext)
}

func (s *ValueExprContext) FloatValue() IFloatValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFloatValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFloatValueContext)
}

func (s *ValueExprContext) IntegerValue() IIntegerValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIntegerValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIntegerValueContext)
}
